# drat

./: .coverage  .env.example  .gitignore  CITATION.cff  LICENSE  README.md  coverage.xml  pyproject.toml  pytest.ini  setup.sh  setup_dev.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  research_contribution.yml
examples/: integration_example.py  lambda_sweep.py  preprocessing_example.py  tokenizer_example.py  train_example.py  transformer_example.py
src/: __init__.py
src/data/: dataset_loader.py  preprocessing.py
src/integration/: __init__.py  benchmarks.py  pipeline.py  validation.py
src/models/: __init__.py  attention.py  config.py  feedforward.py  gate_recomputation.py  gated_transformer.py  gates.py  recomputation_hooks.py  transformer.py
src/tokenizer/: __init__.py  bpe_tokenizer.py
src/training/: __init__.py  cost_tracker.py  loss.py  trainer.py
src/utils/: metrics.py
tests/: test_bpe_tokenizer.py  test_cost_tracker.py  test_dataset_loader.py  test_gate_recomputation.py  test_gated_transformer.py  test_gates.py  test_gradient_validation.py  test_integration.py  test_loss.py  test_metrics.py  test_preprocessing.py  test_recomputation_hooks.py  test_recomputation_integration.py  test_trainer.py  test_transformer_model.py
